# snakebird-solver

./: CMakeLists.txt  LICENSE  README.org
src/: bit-packer.h  compress.h  file-backed-array.h  game.h  level00.h  level01.h  level02.h  level03.h  level04.h  level05.h  level06.h  level07.h  level08.h  level09.h  level10.h  level11.h  level12.h  level13.h  level14.h  level15.h  level16.h  level17.h  level18.h  level19.h  level20.h  level21.h  level22.h  level23.h  level24.h  level25.h  level26.h  level27.h  level28.h  level29.h  level30.h  level31.h  level32.h  level33.h  level34.h  level35.h  (+20 more)
src/snakebird/: level00.cc  level01.cc  level02.cc  level03.cc  level04.cc  level05.cc  level06.cc  level07.cc  level08.cc  level09.cc  level10.cc  level11.cc  level12.cc  level13.cc  level14.cc  level15.cc  level16.cc  level17.cc  level18.cc  level19.cc  level20.cc  level21.cc  level22.cc  level23.cc  level24.cc  level25.cc  level26.cc  level27.cc  level28.cc  level29.cc  level30.cc  level31.cc  level32.cc  level33.cc  level34.cc  level35.cc  level36.cc  level37.cc  level38.cc  level39.cc  (+15 more)
